[package]
name = "mun_syntax"
description = "Parsing functionality for the Mun programming language"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
mun_abi = { version = "0.6.0-dev", path = "../mun_abi" }
drop_bomb = { workspace = true }
itertools = { workspace = true }
ra_ap_text_edit = { workspace = true }
rowan = { workspace = true }
smol_str = { workspace = true, features = ["serde", "std"] }
text-size = { workspace = true, features = ["serde"] }
unicode-xid = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
